<resources>
	<string name="app_name">Folx</string>
	<string name="hello">Hello</string>
	<string name="title_activity_sign_in">SignIn</string>
	<string name="tab_text_1">Sign Up</string>
	<string name="tab_text_2">Sign In</string>
	<string name="title_activity_swipe">SwipeActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_home">Home</string>
	<string name="menu_profile">Profile</string>
	<string name="menu_your_story">Your Story</string>
	<string name="menu_messages">Messages</string>
	<string name="menu_settings">Settings</string>

	<string name="home_second">Home Second</string>

	<string name="dialog_permission_title">Grant Permissions</string>
	<string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
	<string name="go_to_settings">GOTO SETTINGS</string>
</resources>
