<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/nav_home">

	<fragment
		android:id="@+id/nav_home"
		android:name="com.fx.folx.ui.home.HomeFragment"
		android:label="@string/menu_home"
		tools:layout="@layout/fragment_home">

		<action
			android:id="@+id/action_HomFragment_to_Profile"
			app:destination="@id/nav_profile"/>

		<action
			android:id="@+id/action_HomeFragment_to_Messages"
			app:destination="@id/nav_messages" />

		<action
			android:id="@+id/action_HomeFragment_to_Story"
			app:destination="@id/nav_stories"/>




	</fragment>

	<fragment
		android:id="@+id/nav_profile"
		android:name="com.fx.folx.ui.profile.ProfileFragment"
		android:label="Gallery"
		tools:layout="@layout/fragment_profile" />

	<fragment
		android:id="@+id/nav_settings"
		android:name="com.fx.folx.ui.slideshow.SlideshowFragment"
		android:label="@string/menu_settings"
		tools:layout="@layout/fragment_slideshow" />

	<activity
		android:id="@+id/nav_stories"
		android:name="com.fx.folx.StoryActivity"
		android:label="@string/menu_your_story"
		tools:layout="@layout/activity_story"/>

	<activity
		android:id="@+id/nav_messages"
		android:name="com.fx.folx.ChatActivity"
		android:label="@string/menu_messages"
		tools:layout="@layout/activity_chat"/>
</navigation>